# lazydeck

./: AGENTS.md  Cargo.toml  README.md  build.rs  justfile  shell.nix
docs/: SELECT_USAGE.md
examples/: init.lua
examples/demo.lazycmd/demo/: action.lua  config.lua  init.lua  meta.lua
examples/minimal.lazycmd/minimal/: init.lua
nix/: android.nix
preset/lua/: README.md  api.lua  base64.lua  cache.lua  clipboard.lua  component.lua  config.lua  copy_from_neovim.lua  fs.lua  global.d.lua  hash.lua  html.lua  http.lua  http_server.lua  inspect.lua  interactive.lua  json.lua  keymap.lua  manager.lua  plugin_manager.lua  secrets.lua  socket.lua  string.lua  style.lua  system.lua  time.lua  url.lua  util.lua  yaml.lua
scripts/: setup_dev.sh
src/: README.md  app.rs  input_handler.rs  keymap.rs  log.rs  main.rs  page.rs  state.rs  term.rs
src/plugin/: README.md  lua.rs  mod.rs
src/plugin/deck/: api.rs  base64.rs  cache.rs  clipboard.rs  fs.rs  hash.rs  highlighter.rs  html.rs  http.rs  http_server.rs  json.rs  keymap.rs  mod.rs  path.rs  plugin_manager.rs  secrets.rs  socket.rs  style.rs  system.rs  time.rs  url.rs  yaml.rs
src/widgets/: README.md  header.rs  image.rs  list.rs  native_image.rs  renderable.rs  text.rs
