[package]
name = "lazydeck"
version = "0.1.0"
edition = "2021"
description = "A Rust + Lua terminal UI file manager/command palette"

[dependencies]
anyhow             = "1.0.89"
libc               = "0.2.159"
which              = "7.0.0"
mlua               = { version = "0.10.0", features = ["luajit", "vendored", "error-send"] }
tokio              = { version = "1.40.0", features = ["full"] }
crossterm          = { version = "0.28.0", features = ["event-stream"] }
futures            = "0.3.28"
better-panic       = "0.3.0"
tokio-stream       = "0.1.16"
async-stream       = "0.3.6"
tracing-appender   = "0.2.3"
tracing-subscriber = "0.3.18"
tracing            = "0.1.40"
shell-words        = "1.1.0"
ansi-to-tui        = "8.0.1"
reqwest            = { version = "0.12", features = ["json"] }
chrono             = "0.4"
base64             = "0.22.1"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
open               = "5.0"
unicode-width      = "0.2"
syntect            = { version = "5.3.0", default-features = false, features = ["parsing", "plist-load", "regex-onig"] }
ratatui            = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
serde_yaml = "0.9.34"
arboard = "3.4.0"
percent-encoding = "2.3.1"
scraper = "0.26.0"
image = { version = "0.25.5", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
