[package]
name        = "lazydeck"
version     = "0.1.0"
edition     = "2021"
description = "A Rust + Lua terminal UI file manager/command palette"

[dependencies]
anyhow             = "1.0.102"
libc               = "0.2.186"
which              = "8.0.2"
mlua               = { version = "0.11.6", features = ["lua55", "vendored", "error-send"] }
tokio              = { version = "1.52.3", features = ["full"] }
crossterm          = { version = "0.29.0", features = ["event-stream"] }
futures            = "0.3.32"
better-panic       = "0.3.0"
tokio-stream       = "0.1.18"
async-stream       = "0.3.6"
tracing-appender   = "0.2.5"
tracing-subscriber = "0.3.23"
tracing            = "0.1.44"
shell-words        = "1.1.1"
ansi-to-tui        = "8.0.1"
chrono             = "0.4"
base64             = "0.22.1"
md5                = "0.7.0"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
open               = "5.3"
unicode-width      = "0.2"
syntect            = { version = "5.3.0", default-features = false, features = ["parsing", "plist-load", "regex-onig"] }
ratatui            = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
serde_yaml         = "0.9.34"
percent-encoding   = "2.3.2"
scraper            = "0.27.0"
image              = { version = "0.25.10", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { version = "0.12", features = ["json"] }
arboard = "3.6.1"
